syntax = "proto3";

package billing.v1;

import "protos/distributed.proto";

option go_package = "github.com/bd878/gallery/server/api";

service Billing {
	rpc GetServers(GetServersRequest) returns (GetServersResponse) {}
	rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse) {}
	rpc StartPayment(StartPaymentRequest) returns (StartPaymentResponse) {}
	rpc ProceedPayment(ProceedPaymentRequest) returns (ProceedPaymentResponse) {}
	rpc CancelPayment(CancelPaymentRequest) returns (CancelPaymentResponse) {}
	rpc RefundPayment(RefundPaymentRequest) returns (RefundPaymentResponse) {}
	rpc GetInvoice(GetInvoiceRequest) returns (GetInvoiceResponse) {}
	rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse) {}
}

message Invoice {
	string    id = 1;
	int64     user_id = 2;
	string    currency = 3;
	string    status = 4;
	int64     total = 5;
	string    created_at = 6;
	string    updated_at = 7;
}

message Payment {
	int64     id = 1;
	int64     user_id = 2;
	string    invoice_id = 3;
	string    status = 4;
	string    currency = 5;
	int64     total = 6;
	string    created_at = 7;
	string    updated_at = 8;
}

message CreateInvoiceRequest {
	string  id = 1;
	int64   user_id = 2;
	string  currency = 3;
	int64   total = 4;
}

message CreateInvoiceResponse {
}

message StartPaymentRequest {
	int64   id = 1;
	int64   user_id = 2;
	string  invoice_id = 3;
	string  currency = 4;
	int64   total = 5;
}

message StartPaymentResponse {
}

message ProceedPaymentRequest {
	int64   id = 1;
	int64   user_id = 2;
	string  invoice_id = 3;
}

message ProceedPaymentResponse {
}

message CancelPaymentRequest {
	int64   id = 1;
	int64   user_id = 2;
	string  invoice_id = 3;
}

message CancelPaymentResponse {
}

message RefundPaymentRequest {
	int64   id = 1;
	int64   user_id = 2;
	string  invoice_id = 3;
}

message RefundPaymentResponse {
}

message GetInvoiceRequest {
	string id = 1;
	int64  user_id = 2;
}

message GetInvoiceResponse {
	Invoice invoice = 1;
}

message GetPaymentRequest {
	int64   id = 1;
	int64   user_id = 2;
}

message GetPaymentResponse {
	Payment payment = 1;
}